fix drawer on small screen

--- a/client/app.styl
+++ b/client/app.styl
@@ -132,3 +132,50 @@ $right-pane-width := 28em
 
 .navigation-drawer--close:not(.navigation--permanent).navigation-drawer--right
   transform: translate3d($right-pane-width,0,0)
+
+// * -16px on Desktop
+// phone     Extra small	 xs	 small to large handset	   < 600px
+// tablet    Small	       sm	 small to medium tablet	   600px > < 960px
+// laptop    Medium	       md	 large tablet to laptop	   960px > < 1264*
+// desktop   Large	       lg	 desktop	                 1264 > < 1904px*
+// tv        Extra large   xl	 4k and ultra-wides	       > 1904px*
+$device-breakpoints := {
+  xs: 0
+  sm: 600px
+  md: 960px
+  lg: (1280px - 16px) // Desktop gets a 16dp reduction
+  xl: (1920px - 16px) // https://material.io/guidelines/layout/responsive-ui.html#responsive-ui-breakpoints
+}
+
+$media-breakpoints := {
+  xs-only: "only screen and (max-width: %s)" % ($device-breakpoints.sm - 1)
+  sm-only: "only screen and (min-width: %s) and (max-width: %s)" % ($device-breakpoints.sm ($device-breakpoints.md  - 1))
+  sm-and-down: "only screen and (max-width: %s)" % ($device-breakpoints.md - 1)
+  sm-and-up: "only screen and (min-width: %s)" % $device-breakpoints.sm
+  md-only: "only screen and (min-width: %s) and (max-width: %s)" % ($device-breakpoints.md ($device-breakpoints.lg  - 1))
+  md-and-down: "only screen and (max-width: %s )" % ($device-breakpoints.lg - 1)
+  md-and-up: "only screen and (min-width: %s)" % $device-breakpoints.md
+  lg-only: "only screen and (min-width: %s) and (max-width: %s)" % ($device-breakpoints.lg ($device-breakpoints.xl - 1))
+  lg-and-down: "only screen and (max-width: (%s - 1))" % $device-breakpoints.xl
+  lg-and-up: "only screen and (min-width: %s)" % $device-breakpoints.lg
+  xl-only: "only screen and (min-width: %s)" % $device-breakpoints.xl
+}
+
+@media $media-breakpoints.sm-and-down
+  .toolbar
+    .btn--icon
+      width 27px
+      height 27px
+      margin 4px
+
+@media $media-breakpoints.lg-and-down
+  .canvas
+    margin-left 0
+    margin-right 0
+
+@media $media-breakpoints.lg-and-up
+  .drawer .canvas
+    margin-left 300px
+
+  .drawerRight .canvas
+    margin-right 28em
